Fixed z-index for jquery ui widgets, added autocomplete to write-comment

--- a/css/eze.css
+++ b/css/eze.css
@@ -937,7 +937,9 @@
   overflow-y: auto;
   padding: 0 10px;
   border-radius: 4px;
-  box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.2); }
+  box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.2);
+  -webkit-overflow-scrolling: touch;
+  -webkit-transform: translateZ(0); }
   .eze .eze-comments li {
     border-bottom: 1px solid #dcdcdc;
     padding: 6px 15px;
@@ -1559,7 +1561,7 @@
 body {
   margin-left: 63px; }
 
-#ezieMainContainer, .ui-datepicker {
+#ezieMainContainer, .ui-widget {
   z-index: 80000 !important; }
 
 .eze {
