--- a/css/sass/interface-elements.sass
+++ b/css/sass/interface-elements.sass
@@ -193,7 +193,9 @@
 		overflow-y: auto
 		padding: 0 10px
 		border-radius: 4px
-		box-shadow: inset 0px 0px 10px rgba(0,0,0,0.2)
+		box-shadow: inset 0px 0px 5px rgba(0,0,0,0.2)
+		-webkit-overflow-scrolling: touch
+		-webkit-transform: translateZ(0)
 
 		li
 			border-bottom: 1px solid #dcdcdc
